# wt_vcpkg

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
wt_vcpkg/: CMakeLists.txt  wt_vcpkg.cpp
